# var-v2

./: .dockerignore  .env.example  .gitignore  .gitmodules  BUGFIX_SUMMARY.md  CLAUDE.md  CODE_REVIEW_CONFIG.md  CONFIG_MIGRATION.md  CONFIG_UPDATE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  FILENAME_UTILS_README.md  FILE_NAMING_UPDATE.md  FILE_STORAGE_CHANGES.md  FILE_STORAGE_FIX_SUMMARY.md  GIT_SUBMODULE_GUIDE.md  IMPLEMENTATION_GUIDE.md  MODEL_VERSION_CHANGES.md  MODEL_VERSION_UPDATE_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  RABBITMQ_CLEANUP.md  RABBITMQ_QUEUES.md  README.md  README.zh.md  REPOSITORY_SETUP_COMPLETE.md  STORAGE_PATH_GUIDE.md  TRACKING_MERGE_INTEGRATION.md  VIDEO_PLAYER_IMPROVEMENTS.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.cpu.yml  docker-compose.prod.yml  test_integration.py  接口设计文档.md  系统设计文档.md
docker/base/: Dockerfile.java-ffmpeg  Dockerfile.python-ffmpeg  README.md
env/: CONFIGURATION_MAP.md  README.md
env/ai-processor/: .env.development  .env.example  .env.production
env/backend/: .env.development  .env.example  .env.production
env/frontend/: .env.example  .env.production
env/shared/: .env.development  .env.production
qt-desktop/: .gitignore  CMakeLists.txt  README.md  build.sh
qt-desktop/resources/: resources.qrc
qt-desktop/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  servicemanager.cpp  servicemanager.h
scripts/: generate-docker-compose.cmd  generate-docker-compose.ps1  generate-docker-compose.py  generate-docker-compose.sh  use-env.cmd  use-env.ps1  use-env.sh
